change search from id to collection

--- a/app/views/dm_items/index.html.erb
+++ b/app/views/dm_items/index.html.erb
@@ -8,7 +8,7 @@
 	  <div class="form-inline col-xs-10">
 	  <div class="form-group col-xs-12">
 		  <%= text_field_tag :search, params[:search], :class => "form-control" %>
-		  <%= submit_tag "Search", :name => nil, :class => "btn btn-primary" %>
+		  <%= submit_tag "Filter by Collection", :name => nil, :class => "btn btn-primary" %>
 	  </div>
   </div>
 	  <% end %>
