--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,27 +10,20 @@
 
   <body>
 	  <header>
-	        <h1>Digital Media Log</h1>
+	        <%= render 'layouts/navigation' %>
 	  </header>
-	  <% if current_user %> 
-	    <ul> 
-	      <li><%= current_user.email %></li> 
-	      <li><%= link_to "Log out", logout_path, method: "delete" %></li> 
-	    </ul> 
-	  <% else %> 
-	    <ul> 
-	      <li><%= link_to "Login", 'login' %></a></li> 
-	      <li><%= link_to "Signup", 'signup' %></a></li> 
-	    </ul> 
-	  <% end %>
 	  
+	  <main role="main">
+	  <div class="container">
     <%= yield %>
-    <div id="main">
+	
       <% if !flash[:notice].blank? %>
         <div class="notice">
           <%= flash[:notice] %>
         </div>
       <% end %>
+	  </div>
+	  </main>
 	<%= javascript_include_tag "application", "data-turbolinks-track" => true %>
   </body>
 </html>
