--- a/app/views/dm_items/new.html.erb
+++ b/app/views/dm_items/new.html.erb
@@ -1,10 +1,10 @@
 <% @page_title = " | Add Item" %>
 <br/>
 <br/>
-<div class="dm_items new">
-      <h2 class="panel-title">Add Digital Media Item</h2>
+<div class="dm_items new col-xs-6 col-xs-offset-3">
+      <h1>Add Digital Media Item</h1>
 
-  
 
-  <%= render(:partial => "form") %> 
+
+  <%= render(:partial => "form") %>
 </div>
