--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,33 +1,37 @@
 <% @page_title = " | Sign Up" %>
 
-<%= form_for(@user) do |f| %>
+<div class="col-xs-2 col-xs-offset-5">
+	<h1>Sign Up</h1>
+	<%= form_for(@user) do |f| %>
 
-<% if @user.errors.any? %>
-	<div id="error_explanation" class="text-danger">
-		<p><%= pluralize(@user.errors.count, "error") %> prohibited this record from being saved:</p>
-		<ul>
-			<% @user.errors.full_messages.each do |msg| %>
-			<li><%= msg %></li>
-			<% end %>
-		</ul>
+	<% if @user.errors.any? %>
+		<div id="error_explanation" class="text-danger">
+			<p><%= pluralize(@user.errors.count, "error") %> prohibited this record from being saved:</p>
+			<ul>
+				<% @user.errors.full_messages.each do |msg| %>
+				<li><%= msg %></li>
+				<% end %>
+			</ul>
+		</div>
+	<% end %>
+
+	<div class="form-group">
+		<!-- <%= f.label(:email, class: "control-label") %> -->
+		<%= f.email_field(:email, class: "form-control", placeholder: "Email") %>
 	</div>
-<% end %>
 
-<div class="form-group">
-	<%= f.label(:email, class: "control-label") %>
-	<%= f.email_field(:email, class: "form-control") %>
+	<div class="form-group">
+		<!-- <label class="control-label">Password</label> -->
+		<%= f.password_field(:password, class: "form-control", placeholder: "Password")%>
+	</div>
+
+	 <div class="form-group">
+	 	<!-- <label class="control-label">Password Confirmation</label> -->
+	 	<%= f.password_field( :password_confirmation, class: "form-control", placeholder: "Confirm password") %>
+	 </div>
+
+	<%= submit_tag("Submit", :class => "btn btn-primary", :id => "submit-button") %>
+
 </div>
-
-<div class="form-group">
-	<label class="control-label">Password</label>
-	<%= f.password_field :password, class: "form-control" %>
-</div>
- 
- <div class="form-group">
- 	<label class="control-label">Password Confirmation</label>
- 	<%= f.password_field :password_confirmation, class: "form-control" %>
- </div>
-
-<%= submit_tag("Submit", :class => "btn btn-primary", :id => "submit-button") %>
 
 <% end %>
