--- a/app/views/dm_items/index.html.erb
+++ b/app/views/dm_items/index.html.erb
@@ -7,6 +7,7 @@
     	  <div class="form-group">
     		  <%= text_field_tag :search, params[:search], :class => "form-control" %>
     		  <%= submit_tag "Filter by Parent Resource", :name => nil, :class => "btn btn-primary" %>
+			  <%= link_to("Clear", dm_items_path, :class => 'btn btn-default') %>
     	  </div>
   	  <% end %>
 
