--- a/app/views/dm_items/index.html.erb
+++ b/app/views/dm_items/index.html.erb
@@ -1,4 +1,4 @@
-<% @page_title = " | Index" %>
+<% @page_title = " | Home" %>
 <div class="dm_items index">
   <div class="row">
     <div class="col-xs-12">
