make notes field pretty

--- a/app/views/dm_items/_form.html.erb
+++ b/app/views/dm_items/_form.html.erb
@@ -76,9 +76,11 @@
 		</div>
 	</div>
 
-<!-- ><div class="form-group">
-	<%= f.label(:notes) %>
-	<%= f.text_area(:notes, :size => "40x5") %>
+<!-- <div class="form-group">
+	<%= f.label(:notes, "Notes", :class => "control-label col-xs-3") %>
+	<div class="col-xs-9">
+	<%= f.text_area(:notes, :rows => "5", :class => "form-control") %>
+	</div>
 </div> -->
 
 <div class="col-xs-9 col-xs-offset-3">
