--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -3,7 +3,9 @@
 <nav class="navbar navbar-inner navbar-fixed-top">
   <div class="container">
     <div class="navbar-header">
-      <%= link_to 'Home', root_path, class: 'navbar-brand' %>
+		<ul class="nav navbar-nav">
+      <li><%= link_to 'Home', root_path, class: 'navbar-brand' %></li>
+	  </ul>
       <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
         <span class="sr-only">Toggle navigation</span>
         <span class="icon-bar"></span>
