--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -14,7 +14,15 @@
       </button>
 	  </div>
 	  <div>
-	  <ul class="nav navbar-nav navbar-right">  
+	  <ul class="nav navbar-nav navbar-right">
+		  <% if user_signed_in? %>
+		    Logged in as <strong><%= current_user.email %></strong>.
+		    <%= link_to 'Edit profile', edit_user_registration_path, :class => 'navbar-link' %> |
+		    <%= link_to "Logout", destroy_user_session_path, method: :delete, :class => 'navbar-link'  %>
+		  <% else %>
+		    <%= link_to "Sign up", new_user_registration_path, :class => 'navbar-link'  %> |
+		    <%= link_to "Login", new_user_session_path, :class => 'navbar-link'  %>
+		  <% end %>  
   </ul>   
 </div>
   </div>
