disables submit button by default

--- a/app/views/dm_items/_form.html.erb
+++ b/app/views/dm_items/_form.html.erb
@@ -84,7 +84,7 @@
 </div> -->
 
 <div class="col-xs-9 col-xs-offset-3">
-	<%= submit_tag("Submit", :class => "btn btn-primary", :id => "submit-button") %>
+	<%= submit_tag("Submit", :class => "btn btn-primary", :id => "submit-button", :disabled => true) %>
 	<%= link_to("Cancel", dm_items_path, :class => 'btn btn-danger') %>
 </div>
 
