remove unnecessary comma

--- a/app/views/dm_items/_form.html.erb
+++ b/app/views/dm_items/_form.html.erb
@@ -41,7 +41,7 @@
 	</div>
 
 	<div class="form-group">
-		<%= f.label(:format, "Format*", :class => "control-label col-xs-3",) %>
+		<%= f.label(:format, "Format*", :class => "control-label col-xs-3") %>
 		<div class="col-xs-9">
 			<%= f.select(:format, ["CD", "CD-R", "CD-ROM", "CD-RW", "DVD", "DVD+R", "DVD+R DL", "DVD+RW", "DVD-R", "DVD-RW", "Flash Memory: USB", "Floppy disk: 3 1/2 inch", "Floppy disk: 5 1/4 inch", "Hard Drive", "Hard Drive: eSATA", "Hard Drive: Firewire", "Hard Drive: PATA", "Hard Drive: SCSI", "Hard Drive: USB", "Memory Card", "Minidisc", "Zip disk"], {:include_blank => ""}, {:class => "form-control", :required => true}) %>
 		</div>
