comment out disposition field on view

--- a/app/views/dm_items/show.html.erb
+++ b/app/views/dm_items/show.html.erb
@@ -42,11 +42,11 @@
       <td><%= @dm_item.transfer_date %></td>
     </tr>
     <tr>
-      <th>Disposition</th>
+<!--       <th>Disposition</th>
       <td><%= @dm_item.disposition %></td>
     </tr>
     <tr>
-<!--      <th>Notes</th>
+     <th>Notes</th>
       <td><%= @dm_item.notes %></td>
     </tr>
 -->
