add format to view

--- a/app/views/dm_items/show.html.erb
+++ b/app/views/dm_items/show.html.erb
@@ -30,6 +30,10 @@
       <td><%= @dm_item.resource %></td>
     </tr>
     <tr>
+      <th>Format</th>
+      <td><%= @dm_item.format %></td>
+    </tr>
+    <tr>
       <th>Transfer Status</th>
       <td><%= @dm_item.status %></td>
     </tr>
