--- a/app/views/dm_items/index.html.erb
+++ b/app/views/dm_items/index.html.erb
@@ -22,6 +22,7 @@
       <th><%= sort_link "display_title", "Component" %></th>
       <th><%= sort_link "resource", "Resource" %></th>
 	  <!-- ><th>Created</th> -->
+	  <th><%= sort_link "modified_by", "User" %></th>
 	  <th>Updated</th>
       <th>Actions</th>
     </tr>
@@ -37,7 +38,8 @@
   	  <td><%= dm_item.display_title %></td>
   	  <td><%= dm_item.resource %></td>
   	  <!-- <td><%= dm_item.created_at.strftime("%x %X") %></td> -->
-  	  <td><%= dm_item.updated_at.strftime("%b %e, %Y %l:%M %p") %></td>
+  	  <td><%= dm_item.modified_by %></td>
+	  <td><%= dm_item.updated_at.strftime("%b %e, %Y") %></td>
         <td class="actions">
           <%= link_to("Edit", {:action => 'edit', :id => dm_item.id}, :class => 'btn btn-xs btn-default') %>
 		  <%= link_to("View", {:action => 'show', :id => dm_item.id}, :class => 'btn btn-xs btn-default') %>
