--- a/app/views/dm_items/index.html.erb
+++ b/app/views/dm_items/index.html.erb
@@ -19,6 +19,7 @@
       <!-- <th>Transfer Method</th> -->
 <!--      <th>Transfer Date</th> -->
 <!--       <th>Disposition</th> -->
+      <th>Virus Check</th>
       <th>Parent Component</th>
       <th>Parent Resource</th>
 	  <!-- ><th>Created</th> -->
@@ -31,6 +32,7 @@
         <td><%= dm_item.auto_id %></td>
         <td><%= dm_item.format %></td>
   	  <td><%= dm_item.status %></td>
+      <td><%= dm_item.virus_check %></td>
   	  <!-- <td><%= dm_item.method %></td> -->
   	  <!-- <td><%= dm_item.transfer_date %></td> -->
   	  <!-- <td><%= dm_item.disposition %></td> -->
