--- a/app/views/dm_items/_form.html.erb
+++ b/app/views/dm_items/_form.html.erb
@@ -69,6 +69,13 @@
 		</div>
 	</div>
 
+	<div class="form-group">
+		<%= f.label(:virus_check, "Virus Check*", :class => "control-label col-xs-3") %>
+		<div class="col-xs-9">
+			<%= f.select(:virus_check, ["Not Checked", "Checked - Success", "Checked - Failed"], {}, {:class => "form-control"}) %>
+		</div>
+	</div>
+
 <!--
 	<div class="form-group">
 		<%= f.label(:disposition, "Item Disposition", :class => "control-label col-xs-3") %>
