--- a/app/views/dm_items/show.html.erb
+++ b/app/views/dm_items/show.html.erb
@@ -11,6 +11,7 @@
   :refid
   :display_title
   :resource
+  :virus_check
 -->
   <table class="table table-hover">
     <tr>
@@ -61,6 +62,10 @@
     <tr>
       <th>Updated</th>
       <td><%= @dm_item.updated_at.strftime("%x %X") %></td>
+    </tr>
+    <tr>
+      <th>Virus Check</th>
+      <td><%= @dm_item.virus_check %></td>
     </tr>
   </table>
 
