Clarifying code with notes

--- a/app/views/dm_items/index.html.erb
+++ b/app/views/dm_items/index.html.erb
@@ -19,6 +19,7 @@
       <!-- <th>Transfer Method</th> -->
 <!--      <th>Transfer Date</th> -->
 <!--       <th>Disposition</th> -->
+<!--add virus checking-->
       <th>Virus Check</th>
       <th>Parent Component</th>
       <th>Parent Resource</th>
