--- a/app/views/dm_items/show.html.erb
+++ b/app/views/dm_items/show.html.erb
@@ -63,6 +63,7 @@
       <th>Updated</th>
       <td><%= @dm_item.updated_at.strftime("%x %X") %></td>
     </tr>
+    <!-- virus checking -->
     <tr>
       <th>Virus Check</th>
       <td><%= @dm_item.virus_check %></td>
