--- a/app/views/dm_items/_form.html.erb
+++ b/app/views/dm_items/_form.html.erb
@@ -68,7 +68,7 @@
 			<%= f.date_field(:transfer_date, {:class => "form-control"}) %>
 		</div>
 	</div>
-
+<!--add virus checking-->
 	<div class="form-group">
 		<%= f.label(:virus_check, "Virus Check*", :class => "control-label col-xs-3") %>
 		<div class="col-xs-9">
