--- a/app/views/users/registrations/edit.html.erb
+++ b/app/views/users/registrations/edit.html.erb
@@ -1,10 +1,10 @@
 <h2>Edit <%= resource_name.to_s.humanize %></h2>
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }, :html => {:class => "form-horizontal"}) do |f| %>
+<%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }, :html => {:class => "form-signup"}) do |f| %>
   <%= devise_error_messages! %>
 
   <div class="form-group">
-    <%= f.label :email, :class => "control-label col-xs-2" %>
-	<div class="col-xs-3">
+    <%= f.label :email %>
+	<div>
 	    <%= f.email_field :email, autofocus: true, autocomplete: "email", :class => "form-control" %>
 	</div>
   </div>
@@ -14,16 +14,16 @@
   <% end %>
 
   <div class="form-group">
-    <%= f.label :current_password, :class => "control-label col-xs-2" %>
-	<div class="col-xs-3">
+    <%= f.label :current_password %>
+	<div>
     <%= f.password_field :current_password, autocomplete: "current-password", :class => "form-control" %><small id="emailHelp" class="form-text text-muted">We need your current password to confirm your changes.</small>
 	</div>
   </div>
   
  
   <div class="form-group">
-    <%= f.label :password, "New Password", :class => "control-label col-xs-2" %> 
-    <div class="col-xs-3">
+    <%= f.label :password, "New password"%> 
+    <div>
 		<%= f.password_field :password, autocomplete: "new-password", :class => "form-control" %> <small id="emailHelp" class="form-text text-muted">Leave blank if you don't want to change it.</small>
 	    <% if @minimum_password_length %>
 	      <small id="emailHelp" class="form-text text-muted"><%= @minimum_password_length %> characters minimum</small>
@@ -32,21 +32,21 @@
   </div>
 
   <div class="form-group">
-    <%= f.label :password_confirmation, :class => "control-label col-xs-2" %>
-	<div class="col-xs-3">
+    <%= f.label :password_confirmation %>
+	<div>
     <%= f.password_field :password_confirmation, autocomplete: "new-password", :class => "form-control" %>
 	</div>
   </div>
 
 	<div class="form-group">
-		<label class="control-label col-xs-2">API Token</label>
-		<div class="col-xs-3">
-			<%= current_user.authentication_token %>
+		<label>API Token</label>
+		<div>
+			<samp><%= current_user.authentication_token %></samp>
 		</div>
 	</div>
 
-  <div class="actions col-xs-3">
-    <%= f.submit "Update" %>
+  <div>
+    <%= f.submit "Update", :class => "btn btn-primary" %>
   </div>
 <% end %>
 
@@ -55,6 +55,6 @@
 <!-- <h3>Cancel my account</h3>
 
 <p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p> -->
-<div class="col-xs-3">
+<!-- <div class="col-xs-9">
 <%= link_to "Back", :back %>
-</div>
+</div> -->
