--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -1,29 +1,37 @@
 <h2>Sign up</h2>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+<%= form_for(resource, as: resource_name, url: registration_path(resource_name), :html => {:class => "form-signup"}) do |f| %>
   <%= devise_error_messages! %>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+  <div class="form-group">
+    <%= f.label :email %>
+	<div>
+	    <%= f.email_field :email, autofocus: true, autocomplete: "email", :class => "form-control" %>
+	</div>
   </div>
 
-  <div class="field">
+  <div class="form-group">
     <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
+      <div>
+  		<%= f.password_field :password, autocomplete: "new-password", :class => "form-control" %>
+  	    <% if @minimum_password_length %>
+  	      <small id="emailHelp" class="form-text text-muted"><%= @minimum_password_length %> characters minimum</small>
+  	</div>
+      <% end %>
+    </div>
+	
+  <div class="form-group">
+    <%= f.label :password_confirmation %>
+	<div>
+    <%= f.password_field :password_confirmation, autocomplete: "new-password", :class => "form-control" %>
+	</div>
   </div>
 
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Sign up" %>
+  <div>
+    <%= f.submit "Sign up", :class => "btn btn-primary" %>
   </div>
 <% end %>
 
+<!-- <div class="col-xs-offset-1">
 <%= render "devise/shared/links" %>
+</div> -->
